--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "dotenv": "^16.4.5",
     "json-server": "^1.0.0-alpha.23",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
